--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
-theme: jekyll-theme-cayman
+---
+layout: default
+modal-id: 1
+date: 2020-01-18
+img: cabin.png
+alt: image-alt
+project-date: January 2020
+client: The Client
+category: Web Development
+description: The description of the project
+
+---
