--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 remote_theme: pages-themes/merlot@v0.2.0
+title: [Top 5 - Animal Restaurant]
+description: [Gabby’s top five customers, recipes, and staff members of the Animal Restaurant app, a business simulation mobile phone game.]
